--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+<!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap" rel="stylesheet">
+<!-- font awesome -->
+<script src="https://kit.fontawesome.com/661da8f7e5.js" crossorigin="anonymous"></script>
+
+<!-- install aos -->
+<link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
+<script src="bower_components/aos/dist/aos.js"></script> 
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
